Using a stack is more readable !